# odoo-maintanance-module

./: README.md
backend/: main.py  models.py  pyproject.toml  schema.py
backend/auth/: auth.py  dbs.py  schema.py  users.py
backend/db/: init.sql
backend/db/migrations/: 001_add_role_to_user.sql
backend/db/reset/: 001_drop_all.sql
backend/db/schema/: 003_enums.sql  004_equipment.sql  005_maintenance_teams.sql  006_maintenance_team_members.sql  007_maintenance_request.sql  008_indexes.sql
backend/routes/: __init__.py  equipment.py  teams.py  tickets.py
frontend/: pnpm-lock.yaml
frontend/app/: global-not-found.js  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/equipment/new/: page.tsx
frontend/app/dashboard/teams/: page.tsx
frontend/app/dashboard/tickets/new/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: Footer.tsx  Navbar.tsx  login-form.tsx
frontend/components/auth/: AuthContext.tsx
frontend/components/tickets/: CreateTicketBox.tsx  CreateTicketForm.tsx  TicketHistoryTables.tsx
frontend/lib/: api.ts
