[project]
name = "fastapi-uv-starter"
version = "0.1.0"
authors = [
    { name = "Angelos Panagiotopoulos", email = "angelospanag@protonmail.com" },
]
description = "A starter project using Python, FastAPI and uv."
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["fastapi[standard]>=0.126.0", "structlog>=25.5.0", "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi-users>=15.0.1",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "supabase>=2.27.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=9.0.2", "pytest-cov>=7.0.0", "ruff>=0.14.10"]
